open organization module

--- a/dionysus-client/yo/app/styles/main.less
+++ b/dionysus-client/yo/app/styles/main.less
@@ -5,6 +5,7 @@
 @import "psychtest";
 @import "question";
 @import "murmur";
+@import "organization";
 
 .brand {
   background-image: url('/public/images/logo.jpg');
