--- a/dionysus-client/yo/templates/home/header/nav.jade
+++ b/dionysus-client/yo/templates/home/header/nav.jade
@@ -17,4 +17,5 @@
       a.item(href="/questions") 心理问答
       a.item(href="/murmurs") 吐槽
       a.item(href="/rooms") 心理聊天室
+      a.item(href="/organizations") 心理圈
       a.item(href="/articles/list/games") 心理游戏
