16PF result table view

--- a/dionysus-client/yo/app/admin.jade
+++ b/dionysus-client/yo/app/admin.jade
@@ -67,6 +67,7 @@ html(class="no-js")
   script(src="/scripts/admin/course-management.js")
   script(src="/scripts/admin/coursesummary.js")
   script(src="/scripts/admin/psytest-management.js")
+  script(src="/scripts/admin/psytest-management-eval.js")
   script(src="/scripts/admin/appointment-management.js")
   script(src="/scripts/admin/consultant-management.js")
   script(src="/scripts/admin/tests.js")
