save result, update result, do yes_no calculation

--- a/dionysus-client/yo/templates/admin/psychtests/answers.jade
+++ b/dionysus-client/yo/templates/admin/psychtests/answers.jade
@@ -10,7 +10,7 @@
 			.item
 				.content
 					.header 日期:
-					|-{{meta.date}}-
+					|-{{meta.date.year}}-{{meta.date.monthOfYear}}-{{meta.date.dayOfMonth}}-
 			.item
 				.content
 					.header 状态:
