--- a/dionysus-client/yo/templates/admin/psychtests/psychtestitem.jade
+++ b/dionysus-client/yo/templates/admin/psychtests/psychtestitem.jade
@@ -1,6 +1,6 @@
 td.user {{ userData.username }}
 td.title {{ testTitle }}
-td.date {{ date }}
+td.date {{date.year}}-{{date.monthOfYear}}-{{date.dayOfMonth}}
 td {{state}}
 td.save
   a.ui.small.green.save.button(href="/admin/psychotestresult/tid={{testId}}&rid={{id}}") 查看结果
