心里咨询界面调整

--- a/dionysus-client/yo/app/styles/main.less
+++ b/dionysus-client/yo/app/styles/main.less
@@ -6,6 +6,7 @@
 @import "question";
 @import "murmur";
 @import "organization";
+@import "consultant";
 
 .brand {
   background-image: url('/public/images/logo.jpg');
@@ -123,10 +124,6 @@ ul.course-categories {
 .region-summary {
   padding-top: 1rem;
   padding-bottom: 2rem;
-}
-
-#consultant-desc, #expertise {
-  background: #F5F5F6;
 }
 
 #modules .ui.card {
