--- a/dionysus-client/yo/templates/home/psychtests/psychtest.jade
+++ b/dionysus-client/yo/templates/home/psychtests/psychtest.jade
@@ -5,24 +5,23 @@
 
     .ui.list.psychtests
       .item.ui.grid
-        span.four.wide.column 受众群分类：
+        span.four.wide.column 受众群：
         .twelve.wide.column
           a.ui.label(href="#") 个体/团体
           a.ui.label(href="#") 企业
       .item.ui.grid
-        span.four.wide.column 测试项目：
+        span.four.wide.column 项目：
         .twelve.wide.column
           a.ui.label(href="#") 常规单项检测
           a.ui.label(href="#") 常规套餐
       .item.ui.grid
-        span.four.wide.column 测试类型：
-        .twelve.wide.column
-          a.ui.label(href="#") 全部
-          a.ui.label(href="#") 人格测试
-          a.ui.label(href="#") 心理健康评定测试
-          a.ui.label(href="#") 行为测试
-          a.ui.label(href="#") 认知发展测试
-          a.ui.label(href="#") 学习与教育测试
+        span.four.wide.column 类型：
+        .twelve.wide.column#psy-type
+          a.ui.label(href="#1") 人格测试
+          a.ui.label(href="#2") 心理健康评定测试
+          a.ui.label(href="#4") 行为测试
+          a.ui.label(href="#3") 认知发展测试
+          a.ui.label(href="#5") 学习与教育测试
           a.ui.label(href="#") 职业测试
           a.ui.label(href="#") 情侣体检（婚检）
           a.ui.label(href="#") 亲子（家庭）体检
