知识页面展示更多内容

--- a/dionysus-client/yo/templates/home/article/homePage/articleVideoSummary.jade
+++ b/dionysus-client/yo/templates/home/article/homePage/articleVideoSummary.jade
@@ -19,9 +19,11 @@
 							a.item(href="/articles/{{items.[0].id}}") {{items.[0].title}}
 							a.item(href="/articles/{{items.[1].id}}") {{items.[1].title}}
 							a.item(href="/articles/{{items.[2].id}}") {{items.[2].title}}
+							a.item(href="/articles/{{items.[6].id}}") {{items.[6].title}}
 				.column
 					.ui.basic.segment
 						.ui.list
 							a.item(href="/articles/{{items.[3].id}}") {{items.[3].title}}
 							a.item(href="/articles/{{items.[4].id}}") {{items.[4].title}}
 							a.item(href="/articles/{{items.[5].id}}") {{items.[5].title}}
+							a.item(href="/articles/{{items.[7].id}}") {{items.[7].title}}
