测试界面调整

--- a/dionysus-client/yo/templates/home/psychtests/testdetail.jade
+++ b/dionysus-client/yo/templates/home/psychtests/testdetail.jade
@@ -6,7 +6,7 @@
 			{{#if cover}}
 			img.ui.centered.image(src="{{cover}}")
 			{{else}}
-			img.ui.centered.image(src="/public/images/T{{id}}.png")
+			img.ui.centered.image(src="/public/images/心理测试.jpg")
 			{{/if}}
 			p
 				h4.ui.header {{description}}
