静态页面：预约须知

--- a/dionysus-client/yo/templates/home/consultant/attention.jade
+++ b/dionysus-client/yo/templates/home/consultant/attention.jade
@@ -3,7 +3,7 @@
 		.ui.stackable.grid
 			.row
 				.column
-					img(src="/public/images/consultantattention.png")
+					img.ui.centered.image(src="/public/images/consultantattention.png")
 			.row
 				.column
 					.ui.basic.segment
@@ -14,16 +14,24 @@
 			.four.column.equal.height.stretched.row
 				.red.column
 					.ui.basic.segment
-						p  如何找到值得信赖的咨询师？
+						p 	如何找到值得信赖的咨询师？
+						p 	您通过心理咨询页面先找到自己需要的话题。
+						|	我们为您筛选出符合此类话题的所有咨询师。
+						|	然后您根据自己需要查看相关咨询师的介绍，找到符合自己要求和信赖的专业咨询师。
 				.pink.column
 					.ui.basic.segment
-						p 如何预约心理咨询师？
+						p 	如何预约心理咨询师？
+						p 	在咨询师头像下方点击 “详情或预约” 按钮，进入咨询师详细介绍以及预约页面。
+						|	输入您的预约信息，请如实填写，方便我们与您取得联系。
 				.green.column
 					.ui.basic.segment
-						p 如何与心理咨询师确定咨询时间？
+						p 	如何与心理咨询师确定咨询时间？
+						p 	首先请选择您期望的时间，我们会第一时间为您和咨询师确认。您可以在用户面板里 “我的预约” 查看您的预约的状态。
+						|	同时，我们也会通过邮件，电话的方式与您再次确认时间。
 				.blue.column
 					.ui.basic.segment
-						p 如何支付费用？
+						p 	如何支付费用？
+						p 	我们暂时采用线下(或者第三方支付的方式)，具体方式请依照我们的引导(邮件)。
 			.row
 				.column
 					.ui.basic.segment
