fix defect of submit question

--- a/dionysus-client/yo/templates/home/question/questionHome.jade
+++ b/dionysus-client/yo/templates/home/question/questionHome.jade
@@ -32,8 +32,8 @@
         .ui.divider
         #cats
           .ui.large.basic.button#all 所有问题
-          .ui.large.basic.button#answered 已经解决
-          .ui.large.basic.button#noAnwered 等待解决
+          .ui.large.basic.button#answered 已经回答
+          .ui.large.basic.button#noAnwered 等待回答
           .ui.large.basic.button#myQuestions 我的问题
         .ui.divider
         #questions
