管理员登录

--- a/dionysus-client/yo/app/adminlogin.jade
+++ b/dionysus-client/yo/app/adminlogin.jade
@@ -36,7 +36,7 @@ html(class="no-js")
                   .ui.left.icon.input
                     input#pass(type="password", name="password", placeholder="请输入密码")
                     i.lock.icon
-                input.ui.primary.button#loginbutton(type="submit", value="登陆")
+                .ui.primary.button#loginbutton(value="登陆") 登录
 
   include ./jade/_library
 
