测试界面调整，测试描述输入

--- a/dionysus-client/yo/templates/home/psychtests/suite.jade
+++ b/dionysus-client/yo/templates/home/psychtests/suite.jade
@@ -18,6 +18,6 @@ h3.header(id="{{id}}") {{ title }}
             a(title="{{ description }}", href="/psychtests/about/{{ id }}") 
               h5.ui.green.header {{title}}
           td {{ object }}
-          td {{shorter_description description}}
+          td {{shorter_description comment}}
           td ...           
         {{/each}}
