--- a/dionysus-client/yo/templates/home/psychtests/table.jade
+++ b/dionysus-client/yo/templates/home/psychtests/table.jade
@@ -1,7 +1,7 @@
 .twelve.wide.column
   h2.ui.dividing.header 
     {{ title }}
-    .sub.header {{ description }}
+    .sub.header {{{description}}}
   form.ui.form.psychtest
     table.ui.striped.table.unstackable.collapsing
       thead
