--- a/dionysus-client/yo/templates/home/psychtests/onebyone.jade
+++ b/dionysus-client/yo/templates/home/psychtests/onebyone.jade
@@ -1,7 +1,7 @@
 .twelve.wide.column
   h2.ui.dividing.header 
     {{ title }}
-    .sub.header {{ description }}
+    .sub.header {{{description}}}
 
   section.ui.vertical.segment.question
   footer.ui.vertical.segment.nav
