bug fix and index page update

--- a/dionysus-client/yo/templates/home/footer.jade
+++ b/dionysus-client/yo/templates/home/footer.jade
@@ -1,7 +1,7 @@
 .ui.centered.grid#footer
   .twelve.wide.column
-    .ui.four.column.horizontally.padded.stackable.grid
-      .equal.height.row
+    .ui.five.column.horizontally.padded.stackable.centered.grid
+      .row
         .grey.column
           .ui.header
             h4 友情链接
@@ -48,9 +48,14 @@
                 a 学校报班
               .item
                 a 个人
-      .centerd.row
+        .grey.column
+            .ui.basic.segment
+              .ui.center.aligned.icon.header
+                i.circular.call.icon
+                |800-800-800
+      .centered.row
         .grey.eight.wide.column
           .ui.basic.center.aligned.segment
-            |地址
-            span.address xxxxxxxxxxxxxxxxxxxxxxxxxxxx
+            p 版权所有 本站内容未经书面许可, 禁止一切形式的转载, 日志存档.
+            p &copy; Copyright 2010-2015 汇心网. All Rights Reserved. (备案号：蜀ICP备15015660号)
 
