change index title and ico

--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -5,7 +5,7 @@ html
     meta(name="description",  content="")
     meta(name="viewport",     content="width=device-width")
     meta(http-equiv="X-UA-Compatible", content="IE=edge;")
-    link(rel="shortcut icon", href="/favicon.ico")
+    link(rel="shortcut icon", href="/logo1.ico")
 
     // build:css({.,.tmp}) /styles/main.css
     link(rel="stylesheet", href="/bower_components/fontawesome/css/font-awesome.css")
@@ -21,7 +21,7 @@ html
     link(rel="stylesheet", href="/styles/pagination.css")
     // endbuild
 
-    title 汇心心理
+    title 汇心网
   body.dionysus
     div#header
     main#main
