--- a/dionysus-client/yo/templates/home/article/homePage/articleDocSummary.jade
+++ b/dionysus-client/yo/templates/home/article/homePage/articleDocSummary.jade
@@ -21,9 +21,14 @@
 							a.item(href="/articles/{{items.[7].id}}") {{items.[7].title}}
 		.column
 			.ui.basic.segment
-				a(href="/articles/{{items.[0].id}}")
+				.ui.centered.image.coveritem
+					.ui.dimmer
+						.content
+							.center
+								h4.ui.inverted.header
+									a(href="/articles/{{items.[0].id}}") {{items.[0].title}}
 					{{#if items.[0].cover}}
-					img.ui.centered.image(src="{{items.[0].cover}}")
+					img(src="{{items.[0].cover}}")
 					{{else}}
-					img.ui.centered.image(src="/public/images/doc-default.png")
+					img(src="/public/images/doc-default.png")
 					{{/if}}
