change logo, article home

--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -5,7 +5,7 @@ html
     meta(name="description",  content="")
     meta(name="viewport",     content="width=device-width")
     meta(http-equiv="X-UA-Compatible", content="IE=edge;")
-    link(rel="shortcut icon", href="/logo1.ico")
+    link(rel="shortcut icon", href="/logo1.png")
 
     // build:css({.,.tmp}) /styles/main.css
     link(rel="stylesheet", href="/bower_components/fontawesome/css/font-awesome.css")
