--- a/dionysus-client/yo/app/styles/main.less
+++ b/dionysus-client/yo/app/styles/main.less
@@ -9,7 +9,7 @@
 @import "consultant";
 
 .brand {
-  background-image: url('/public/images/logo.jpg');
+  background-image: url('/public/images/logo.png');
   background-position: left center;
   background-repeat: no-repeat;
   height : 80px;
